--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# project config
 .DS_Store
 kubeconfig
+test
