add jobjap service and github workflow

--- a/todo-compose/docker-compose.yml
+++ b/todo-compose/docker-compose.yml
@@ -46,7 +46,7 @@ services:
         networks:
             - todo-net
     redis:
-        image: "redis"
+        image: "redis:latest"
         container_name: redis
         networks:
             - todo-net
