--- a/kube/job-position-deployment.yml
+++ b/kube/job-position-deployment.yml
@@ -1,38 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: noti
+  name: job-position
   labels: 
-    app: noti
+    app: job-position
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: noti
+      app: job-position
   template:
     metadata:
       labels:
-        app: noti
+        app: job-position
     spec:
       containers:
-        - name: noti
-          image: todo-notification:release-1.1
-          env:
-            - name: REDIS_HOST
-              value: "redis"
+        - name: job-position
+          image: earthakkharawat/job-position:latest
           ports:
-            - containerPort: 9000
+            - containerPort: 8002
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: noti
+  name: job-position
 spec:
   selector:
-    app: noti
+    app: job-position
   ports:
     - protocol: TCP
       port: 8000
-      targetPort: 9000
+      targetPort: 8002
   # type: NodePort
