--- a/kube/parking-deploymeny.yml
+++ b/kube/parking-deploymeny.yml
@@ -1,35 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: todo-webapp
-  labels:
-    app: todo-webapp
+  name: parking
+  labels: 
+    app: parking
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: todo-webapp
+      app: parking
   template:
     metadata:
       labels:
-        app: todo-webapp
+        app: parking
     spec:
       containers:
-        - name: todo-webapp
-          image: todo-webapp:release-3.1
+        - name: parking
+          image: earthakkharawat/parking:latest
           ports:
-            - containerPort: 3000
+            - containerPort: 8003
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: todo-webapp
+  name: parking
 spec:
   selector:
-    app: todo-webapp
+    app: parking
   ports:
     - protocol: TCP
       port: 8000
-      targetPort: 3000
+      targetPort: 8003
   # type: NodePort
